# expertflow

./: .gitignore  CONTRIBUTING.md  Cargo.toml  PHASE2_SUMMARY.md  README.md  benchmark-results.json  benchmark.py  benchmark_integrated.py  build.rs  deep-benchmark.json  deep_benchmark.py  deepseek_infer.py  dynamic_loader.py  ef_coherent.py  ef_cpu_fast.py  ef_deepseek_mmap.py  ef_engine.py  ef_engine_v2.py  ef_engine_v3.py  ef_engine_v4.py  ef_engine_v5.py  ef_fixed.py  ef_gpu_cached.py  ef_gpu_v2.py  ef_integrated_engine.py  ef_kv_manager.py  ef_kvcache.py  ef_manual_inference.py  ef_minimal.py  ef_native.py  ef_native_stream.py  ef_zerocache.py  expert_predictor.py  expertflow_engine.py  expertflow_final.py  expertflow_v2.py  full-benchmark-results.json  full_benchmark.py  inference-benchmark-v2.json  inference-benchmark.json  (+11 more)
autoresearch/: benchmark.py  expertflow_opt.py  micro_102140.json  micro_102152.json  micro_102227.json  micro_102426.json  micro_102456.json  micro_102534.json  micro_102621.json  micro_102659.json  micro_102722.json  microbench.py  program.md  run_experiments.sh
docs/: M5-OPTIMISATION.md  M5_ARCHITECTURE.md  SPECPREFILL-INTEGRATION.md
experiments/: bench2_144414.json  bench_144311.json  ef_bench.py  ef_bench_v2.py  ef_deepseek_v3_bench.sh  ef_profile_moe.py  ef_run_151942.json  ef_run_151951.json  ef_split_experts.py  ef_v10_bigcache.py  ef_v11_nodequant.py  ef_v12_qmatmul.py  ef_v13_tuned.py  ef_v14_fast.py  ef_v15_batched.py  ef_v16_prefetch.py  ef_v17_pinned.py  ef_v18_prefetch2.py  ef_v19_cpugather.py  ef_v20_profile.py  ef_v21_qcache.py  (+24 more)
(+40 files in other folders)
